--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.15.1",
+    "express": "^4.17.1",
+    "mongoose": "^5.13.3",
     "nuxt": "^2.15.7"
   },
   "devDependencies": {
@@ -29,8 +31,11 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-vue": "^7.12.1",
+    "fibers": "^5.0.0",
     "jest": "^27.0.5",
     "prettier": "^2.3.2",
+    "sass": "^1.35.2",
+    "sass-loader": "^12.1.0",
     "ts-jest": "^27.0.3",
     "vue-jest": "^3.0.4"
   }
