--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,7 @@
 {
   "semi": false,
-  "singleQuote": true
+  "trailingComma": "es5",
+  "bracketSpacing": false,
+  "spaceBeforeFunctionParen": true,
+  "breakBeforeElse": true
 }
