--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "eslint-plugin-vue": "^7.12.1",
     "fibers": "^5.0.0",
     "jest": "^27.0.5",
-    "prettier": "^2.3.2",
+    "prettier-miscellaneous": "^1.5.3",
     "sass": "^1.35.2",
     "sass-loader": "^12.1.0",
     "ts-jest": "^27.0.3",
