--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,8 @@
   "trailingComma": "es5",
   "bracketSpacing": false,
   "spaceBeforeFunctionParen": true,
-  "breakBeforeElse": true
+  "breakBeforeElse": true,
+  "arrowParens": "avoid",
+  "breakLongMethodChains": true,
+  "offsetTernaryExpression": true
 }
