change prettier rule allowParens to always

--- a/.prettierrc
+++ b/.prettierrc
@@ -4,7 +4,7 @@
   "bracketSpacing": false,
   "spaceBeforeFunctionParen": true,
   "breakBeforeElse": true,
-  "arrowParens": "avoid",
+  "arrowParens": "always",
   "breakLongMethodChains": true,
   "offsetTernaryExpression": true
 }
