--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "core-js": "^3.15.1",
     "express": "^4.17.1",
     "mongoose": "^5.13.3",
-    "nuxt": "^2.15.7"
+    "nuxt": "^2.15.7",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
@@ -24,6 +26,8 @@
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/eslint-config-typescript": "^6.0.1",
     "@nuxtjs/eslint-module": "^3.0.2",
+    "@types/passport": "^1.0.7",
+    "@types/passport-local": "^1.0.34",
     "@vue/test-utils": "^1.2.1",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^27.0.5",
