--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.15.1",
     "express": "^4.17.1",
+    "modern-normalize": "^1.1.0",
     "mongoose": "^5.13.3",
     "nuxt": "^2.15.7",
     "passport": "^0.4.1",
