--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,8 +12,10 @@
     "experimentalDecorators": true,
     "baseUrl": ".",
     "paths": {
-      "~/*": ["./*"],
-      "@/*": ["./*"]
+      "~s/*": ["./src/server/*"],
+      "~c/*": ["./src/client/*"],
+      "~e/*": ["./src/entities/*"],
+      "~~/*": ["./*"]
     },
     "types": ["@nuxt/types", "@nuxtjs/axios", "@types/node"]
   },
