install type-fest for better backend typing

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "sass": "^1.35.2",
     "sass-loader": "^10.2.0",
     "ts-jest": "^27.0.3",
+    "type-fest": "^2.1.0",
     "vue-jest": "^3.0.4"
   }
 }
