--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "axios": "^0.21.1",
     "core-js": "^3.15.1",
     "express": "^4.17.1",
     "fitty": "^2.3.5",
