--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express": "^4.17.1",
     "fitty": "^2.3.5",
     "modern-normalize": "^1.1.0",
-    "mongoose": "^5.13.3",
+    "mongoose": "^6.0.9",
+    "mongoose-unique-validator": "^3.0.0",
     "nuxt": "^2.15.7",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
@@ -31,6 +32,7 @@
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/eslint-config-typescript": "^6.0.1",
     "@nuxtjs/eslint-module": "^3.0.2",
+    "@types/mongoose-unique-validator": "^1.0.5",
     "@types/passport": "^1.0.7",
     "@types/passport-local": "^1.0.34",
     "@vue/test-utils": "^1.2.1",
