--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.15.1",
     "express": "^4.17.1",
+    "express-validator": "^6.13.0",
     "fitty": "^2.3.5",
     "modern-normalize": "^1.1.0",
     "mongoose": "^6.0.9",
