--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.13.6",
+    "@nuxt/content": "^1.15.1",
+    "@nuxtjs/sitemap": "^2.4.0",
     "axios": "^0.21.1",
     "core-js": "^3.15.1",
     "express": "^4.17.1",
