--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^6.0.9",
     "mongoose-unique-validator": "^3.0.0",
     "nuxt": "^2.15.7",
+    "nuxt-property-decorator": "^2.9.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "vue-fragment": "^1.5.2",
