--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/style-resources": "^1.2.1",
     "@vue/test-utils": "^1.2.1",
+    "axios": "^0.27.2",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^27.0.5",
     "eslint": "^7.29.0",
