--- a/package.json
+++ b/package.json
@@ -44,8 +44,12 @@
     "prettierx": "^0.19.0",
     "sass": "^1.35.2",
     "sass-loader": "^10.2.0",
+    "tmdb-ts": "0.0.13",
     "ts-jest": "^27.0.3",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.1.0",
     "type-fest": "^2.1.0",
+    "typescript": "^4.8.3",
     "url-slug": "^3.0.4",
     "vue-jest": "^3.0.4"
   }
