--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
     "lint": "npm run lint:js",
     "test": "jest",
-    "add-movie": "ts-node --esm src/utils/insertNewMovie.mts"
+    "add-movie": "ts-node --esm src/utils/insertNewMovie.mts",
+    "add-movie:legacy": "node --experimental-json-modules --loader ts-node/esm ./src/utils/-insertNewMovie.legacy.mts"
   },
   "dependencies": {
     "@nuxt/content": "^1.15.1",
@@ -48,8 +49,6 @@
     "tmdb-ts": "0.0.13",
     "ts-jest": "^27.0.3",
     "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.1.0",
-    "type-fest": "^2.1.0",
     "typescript": "^4.8.3",
     "url-slug": "^3.0.4",
     "vue-jest": "^3.0.4"
