--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,8 +19,5 @@
     },
     "types": ["@nuxt/types", "@types/node", "@nuxt/content"]
   },
-  "exclude": ["node_modules", ".nuxt", "dist"],
-  "ts-node": {
-    "require": ["tsconfig-paths/register"]
-  }
+  "exclude": ["node_modules", ".nuxt", "dist"]
 }
